2005-11-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-start.el (gnus-dribble-read-file): Use make-local-variable
	rather than make-variable-buffer-local for file-precious-flag.

2005-11-12  Kevin Greiner  <kevin.greiner@compsol.cc>

	* gnus-agent.el (gnus-agent-braid-nov): Now tests new nov entries
	for duplicates which are removed.  The invalid sort check then
	triggers a rescan after the sort as sorting may have moved
	duplicate entries such that they can be cheaply detected.

2005-11-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-start.el (gnus-dribble-read-file): Quote file-precious-flag.

2005-11-12  Kevin Greiner  <kevin.greiner@compsol.cc>

	* gnus-agent.el (gnus-agent-article-alist-save-format): Changed
	internal variable to a custom variable.  Changed default value
	from compressed(2) to uncompressed(1).
	(gnus-agent-read-agentview): Reversed revision 7.8 to restore
	support for uncompressed agentview files.  Taken together, reading
	the agentview file should now be 6-7 times faster.

2005-11-11  Jan Nieuwenhuizen  <janneke@gnu.org>

	* gnus-start.el (gnus-dribble-read-file): Set file-precious-flag,
	as a buffer-local variable.  This avoids creating truncated
	dribble files as a result of a hang up, eg.

2005-11-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* messagexmas.el (message-use-toolbar): Change the valid values
	into default, top, bottom, left, and right.
	(message-toolbar-thickness): New variable.
	(message-xmas-setup-toolbar): Locate gnus-xmas-glyph-directory as
	well.
	(message-setup-toolbar): Make it work.

	* gnus-xmas.el (gnus-xmas-update-toolbars): New function.
	(gnus-use-toolbar): Change the valid values into default, top,
	bottom, left, and right.
	(gnus-toolbar-thickness): New variable.
	(gnus-xmas-setup-toolbar): New function.
	(gnus-xmas-setup-group-toolbar): Use it.
	(gnus-xmas-setup-summary-toolbar): Use it.

2005-11-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-start.el (gnus-1): Add "native" to